--- a/index.html
+++ b/index.html
@@ -3,11 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropboxt</title>
+    <title>Dropbox</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
+<!--inizio header-->    
+ <header class="header">
+  <div class="header-section first">
+
+  </div>
+  
+  <div class="header-section second">
+  
+  </div>
+ </header>
+<!--fine header-->
+
+<!--inizio main-->
+ <main>
+
+  <div class="jumbotron-container">
+   <div class="jumbotron">
+
+   </div>  
+  </div>
+
+  <section class="first-main-section">
+
+  </section>
+
+  <section class="second-main-section">
+
+  </section>
+
+  <section class="third-main-section">
+
+  </section>
+
+ </main>
+<!--fine main-->
+
+<!--inizio footer-->
+ <footer class="footer">
+  <div class="footer-container">
+
+  </div>  
+
+ </footer>
+
+    
     
 </body>
 </html>
