feat: add. content of five blocks

--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
     <div class="purchase-link">
      <span>oppure</span><a href="#">acquista ora</a>
     </div>
+
+    <div class="description-title">
+     <h4>Punti salienti del piano</h4>
+    </div>
+    <div class="points">
+     <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+    </div>
+    <div class="points">
+     <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+    </div>
    </div>
 
    <div class="vertical-column second">
@@ -128,6 +138,24 @@
     </div>
     <div class="purchase-link">
      <span>oppure</span><a href="#">acquista ora</a>
+    </div>
+    <div class="description-title">
+     <h4>Punti salienti del piano</h4>
+    </div>
+    <div class="points">
+     <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+    </div>
+    <div class="points">
+     <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+    </div>
+    <div class="points">
+     <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+    </div>
+    <div class="points">
+     <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+    </div>
+    <div class="points">
+     <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
     </div>
    
    </div>
@@ -157,12 +185,46 @@
     <div class="purchase-link">
      <span>oppure</span><a href="#">acquista ora</a>
     </div>
+    <div class="description-title">
+     <h4>Punti salienti del piano</h4>
+     <div class="points">
+      <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+     </div>
+     <div class="points">
+      <p><span class="check">&check;</span>Invia fino a 100 GB con Dropbox Transfert</p>
+     </div>
+    </div>
 
    </div>
 
   </section>
 
+  <section class="second-main-section-title">
+   <div class="second-row">
+    <i class="fas fa-city"></i>
+    <span>Team</span>
+   </div>
+  </section>
+
   <section class="second-main-section">
+   <div class="second-main-section-text">
+    <div class="h3-section-text">
+     <h3>Enterprice</h3>
+    </div>
+    <div class="h4-section-text">
+     <h4>Contatta l'ufficio vendite per i prezzi</h4>
+    </div>
+    <div class="p-section-text">
+     <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+    </div>
+
+   </div>
+
+   <div class="second-main-section-button">
+    <div class="second-main-button">
+     <a href="#" class="contact-center">Contatta l'ufficio vendite</a>
+    </div>
+   </div>
 
 
   </section>
@@ -170,48 +232,105 @@
   <section class="third-main-section">
 
    <div class="third-section-image">
-
+    <img src="./img/partner.png" alt="">
    </div>
 
    <div class="third-section-text">
+    <div class="text-third-block-title">
+      <h3>Entra in contatto con un partner Dropbox</h3>
+    </div>
+    <div class="text-third-block-paragraph">
+     <p>Trova un partner Dropbox e HelloSign di fiducia.Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione,integrazione,gestione e supporto continui</p>
+    </div>
+    <div class="button-link-third-block">
+     <a href="#" class="link-third-block">Trova un partner</a>
+    </div>
 
    </div>
 
   </section>
 
   <section class="fourth-main-section">
-
+   <h2>Esegui più operazioni con Dropbox Business</h2>
   </section>
 
   <section class="fifth-main-section">
    
    <div class="fifth-column-left">
+    <div class="sub-section-column">
+     <img src="./img/business-feature-switching-tools.png" alt="">
+    </div>
+    <div class="text-of-fifth-column">
+     <h3>Passa di meno da uno strumento all'altro</h3> 
+    </div>
+    <div class="ph-of-fifth-column">
+     <p>Porta a termine le attività quotidiane con un solo strumento.Crea,modifica e condividi contenuti cloud da Documenti,Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente de Dropbox</p>
+    </div>
 
    </div>
 
    <div class="fifth-column-center">
-
+    <div class="sub-section-column">
+     <img src="./img/business-feature-send-files-it.png" alt=""> 
+    </div>
+    <div class="text-of-fifth-column">
+     <h3>Passa di meno da uno strumento all'altro</h3> 
+    </div>
+    <div class="ph-of-fifth-column">
+     <p>Porta a termine le attività quotidiane con un solo strumento.Crea,modifica e condividi contenuti cloud da Documenti,Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente de Dropbox</p>
+    </div>
    </div>
 
    <div class="fifth-column-right">
-
+    <div class="sub-section-column">
+     <img src="./img/business-feature-coordinate-it.png" alt="">
+    </div>
+    <div class="text-of-fifth-column">
+     <h3>Passa di meno da uno strumento all'altro</h3> 
+    </div>
+    <div class="ph-of-fifth-column">
+     <p>Porta a termine le attività quotidiane con un solo strumento.Crea,modifica e condividi contenuti cloud da Documenti,Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente de Dropbox</p>
+    </div>
    </div>
    
-
   </section>
 
   <section class="sixth-main-section">
    
    <div class="fifth-column-left">
-
+    <div class="sub-section-column">
+     <img src="./img/business-feature-integrations-it.png" alt="">
+    </div>
+    <div class="text-of-fifth-column">
+     <h3>Passa di meno da uno strumento all'altro</h3> 
+    </div>
+    <div class="ph-of-fifth-column">
+     <p>Porta a termine le attività quotidiane con un solo strumento.Crea,modifica e condividi contenuti cloud da Documenti,Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente de Dropbox</p>
+    </div>
    </div>
  
    <div class="fifth-column-center">
- 
+    <div class="sub-section-column">
+     <img src="./img/business-feature-multi-device.png" alt="">
+    </div>
+    <div class="text-of-fifth-column">
+     <h3>Passa di meno da uno strumento all'altro</h3> 
+    </div>
+    <div class="ph-of-fifth-column">
+     <p>Porta a termine le attività quotidiane con un solo strumento.Crea,modifica e condividi contenuti cloud da Documenti,Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente de Dropbox</p>
+    </div>
    </div>
  
    <div class="fifth-column-right">
- 
+    <div class="sub-section-column">
+     <img src="./img/business-feature-security.png" alt="">
+    </div>
+    <div class="text-of-fifth-column">
+     <h3>Passa di meno da uno strumento all'altro</h3> 
+    </div>
+    <div class="ph-of-fifth-column">
+     <p>Porta a termine le attività quotidiane con un solo strumento.Crea,modifica e condividi contenuti cloud da Documenti,Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente de Dropbox</p>
+    </div>
    </div>
   </section>
 
